RaccoonDB/Internal/Querying/Generated/RaccoonSQLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/julia/RiderProjects/RaccoonDB/RaccoonDB\RaccoonSQL.g4 by ANTLR 4.9.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.1")]
[System.CLSCompliant(false)]
public partial class RaccoonSQLParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, Identifier=30, LINE_COMMENT=31, 
		WS=32;
	public const int
		RULE_query = 0, RULE_createQuery = 1, RULE_ifNotExists = 2, RULE_dropQuery = 3, 
		RULE_ifExists = 4, RULE_alterQuery = 5, RULE_explainQuery = 6, RULE_explainColumnsOnTable = 7, 
		RULE_explainIndicesOnTable = 8, RULE_truncateQuery = 9, RULE_createIndex = 10, 
		RULE_index = 11, RULE_indexColumns = 12, RULE_indexColumn = 13, RULE_createTable = 14, 
		RULE_table = 15, RULE_tableColumns = 16, RULE_tableColumn = 17, RULE_columnConstraint = 18, 
		RULE_autoValue = 19, RULE_notNullConstraint = 20, RULE_uniqueConstraint = 21, 
		RULE_primaryKeyConstraint = 22, RULE_foreignKeyConstraint = 23, RULE_addColumn = 24, 
		RULE_dropColumn = 25, RULE_alterColumn = 26, RULE_selectQuery = 27, RULE_updateQuery = 28, 
		RULE_deleteQuery = 29, RULE_insertQuery = 30;
	public static readonly string[] ruleNames = {
		"query", "createQuery", "ifNotExists", "dropQuery", "ifExists", "alterQuery", 
		"explainQuery", "explainColumnsOnTable", "explainIndicesOnTable", "truncateQuery", 
		"createIndex", "index", "indexColumns", "indexColumn", "createTable", 
		"table", "tableColumns", "tableColumn", "columnConstraint", "autoValue", 
		"notNullConstraint", "uniqueConstraint", "primaryKeyConstraint", "foreignKeyConstraint", 
		"addColumn", "dropColumn", "alterColumn", "selectQuery", "updateQuery", 
		"deleteQuery", "insertQuery"
	};

	private static readonly string[] _LiteralNames = {
		null, "'create'", "'if'", "'not'", "'exists'", "'drop'", "'alter'", "'explain'", 
		"'columns'", "'on'", "'indices'", "'truncate'", "'('", "')'", "'index'", 
		"'table'", "','", "'auto'", "'null'", "'unique'", "'primary'", "'key'", 
		"'foreign'", "'references'", "'add'", "'select'", "'update'", "'delete'", 
		"'insert'", "'into'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "Identifier", "LINE_COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "RaccoonSQL.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static RaccoonSQLParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public RaccoonSQLParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public RaccoonSQLParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class QueryContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CreateQueryContext createQuery() {
			return GetRuleContext<CreateQueryContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DropQueryContext dropQuery() {
			return GetRuleContext<DropQueryContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AlterQueryContext alterQuery() {
			return GetRuleContext<AlterQueryContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExplainQueryContext explainQuery() {
			return GetRuleContext<ExplainQueryContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TruncateQueryContext truncateQuery() {
			return GetRuleContext<TruncateQueryContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SelectQueryContext selectQuery() {
			return GetRuleContext<SelectQueryContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UpdateQueryContext updateQuery() {
			return GetRuleContext<UpdateQueryContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeleteQueryContext deleteQuery() {
			return GetRuleContext<DeleteQueryContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public InsertQueryContext insertQuery() {
			return GetRuleContext<InsertQueryContext>(0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_query; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRaccoonSQLListener typedListener = listener as IRaccoonSQLListener;
			if (typedListener != null) typedListener.EnterQuery(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRaccoonSQLListener typedListener = listener as IRaccoonSQLListener;
			if (typedListener != null) typedListener.ExitQuery(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRaccoonSQLVisitor<TResult> typedVisitor = visitor as IRaccoonSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQuery(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QueryContext query() {
		QueryContext _localctx = new QueryContext(Context, State);
		EnterRule(_localctx, 0, RULE_query);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
				{
				State = 62;
				createQuery();
				}
				break;
			case T__4:
				{
				State = 63;
				dropQuery();
				}
				break;
			case T__5:
				{
				State = 64;
				alterQuery();
				}
				break;
			case T__6:
				{
				State = 65;
				explainQuery();
				}
				break;
			case T__10:
				{
				State = 66;
				truncateQuery();
				}
				break;
			case T__24:
				{
				State = 67;
				selectQuery();
				}
				break;
			case T__25:
				{
				State = 68;
				updateQuery();
				}
				break;
			case T__26:
				{
				State = 69;
				deleteQuery();
				}
				break;
			case T__27:
				{
				State = 70;
				insertQuery();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CreateQueryContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CreateIndexContext createIndex() {
			return GetRuleContext<CreateIndexContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CreateTableContext createTable() {
			return GetRuleContext<CreateTableContext>(0);
		}
		public CreateQueryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_createQuery; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRaccoonSQLListener typedListener = listener as IRaccoonSQLListener;
			if (typedListener != null) typedListener.EnterCreateQuery(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRaccoonSQLListener typedListener = listener as IRaccoonSQLListener;
			if (typedListener != null) typedListener.ExitCreateQuery(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRaccoonSQLVisitor<TResult> typedVisitor = visitor as IRaccoonSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCreateQuery(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CreateQueryContext createQuery() {
		CreateQueryContext _localctx = new CreateQueryContext(Context, State);
		EnterRule(_localctx, 2, RULE_createQuery);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 73;
			Match(T__0);
			State = 76;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__13:
			case T__18:
				{
				State = 74;
				createIndex();
				}
				break;
			case T__14:
				{
				State = 75;
				createTable();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfNotExistsContext : ParserRuleContext {
		public IfNotExistsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifNotExists; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRaccoonSQLListener typedListener = listener as IRaccoonSQLListener;
			if (typedListener != null) typedListener.EnterIfNotExists(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRaccoonSQLListener typedListener = listener as IRaccoonSQLListener;
			if (typedListener != null) typedListener.ExitIfNotExists(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRaccoonSQLVisitor<TResult> typedVisitor = visitor as IRaccoonSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfNotExists(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfNotExistsContext ifNotExists() {
		IfNotExistsContext _localctx = new IfNotExistsContext(Context, State);
		EnterRule(_localctx, 4, RULE_ifNotExists);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78;
			Match(T__1);
			State = 79;
			Match(T__2);
			State = 80;
			Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DropQueryContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IndexContext index() {
			return GetRuleContext<IndexContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TableContext table() {
			return GetRuleContext<TableContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IfExistsContext ifExists() {
			return GetRuleContext<IfExistsContext>(0);
		}
		public DropQueryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dropQuery; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRaccoonSQLListener typedListener = listener as IRaccoonSQLListener;
			if (typedListener != null) typedListener.EnterDropQuery(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRaccoonSQLListener typedListener = listener as IRaccoonSQLListener;
			if (typedListener != null) typedListener.ExitDropQuery(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRaccoonSQLVisitor<TResult> typedVisitor = visitor as IRaccoonSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDropQuery(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DropQueryContext dropQuery() {
		DropQueryContext _localctx = new DropQueryContext(Context, State);
		EnterRule(_localctx, 6, RULE_dropQuery);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 82;
			Match(T__4);
			State = 85;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__13:
				{
				State = 83;
				index();
				}
				break;
			case T__14:
				{
				State = 84;
				table();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 88;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__1) {
				{
				State = 87;
				ifExists();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfExistsContext : ParserRuleContext {
		public IfExistsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifExists; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRaccoonSQLListener typedListener = listener as IRaccoonSQLListener;
			if (typedListener != null) typedListener.EnterIfExists(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRaccoonSQLListener typedListener = listener as IRaccoonSQLListener;
			if (typedListener != null) typedListener.ExitIfExists(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRaccoonSQLVisitor<TResult> typedVisitor = visitor as IRaccoonSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfExists(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfExistsContext ifExists() {
		IfExistsContext _localctx = new IfExistsContext(Context, State);
		EnterRule(_localctx, 8, RULE_ifExists);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 90;
			Match(T__1);
			State = 91;
			Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AlterQueryContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TableContext table() {
			return GetRuleContext<TableContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AddColumnContext addColumn() {
			return GetRuleContext<AddColumnContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DropColumnContext dropColumn() {
			return GetRuleContext<DropColumnContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AlterColumnContext alterColumn() {
			return GetRuleContext<AlterColumnContext>(0);
		}
		public AlterQueryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_alterQuery; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRaccoonSQLListener typedListener = listener as IRaccoonSQLListener;
			if (typedListener != null) typedListener.EnterAlterQuery(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRaccoonSQLListener typedListener = listener as IRaccoonSQLListener;
			if (typedListener != null) typedListener.ExitAlterQuery(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRaccoonSQLVisitor<TResult> typedVisitor = visitor as IRaccoonSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAlterQuery(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AlterQueryContext alterQuery() {
		AlterQueryContext _localctx = new AlterQueryContext(Context, State);
		EnterRule(_localctx, 10, RULE_alterQuery);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93;
			Match(T__5);
			State = 94;
			table();
			State = 98;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__23:
				{
				State = 95;
				addColumn();
				}
				break;
			case T__4:
				{
				State = 96;
				dropColumn();
				}
				break;
			case T__5:
				{
				State = 97;
				alterColumn();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExplainQueryContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IndexContext index() {
			return GetRuleContext<IndexContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExplainColumnsOnTableContext explainColumnsOnTable() {
			return GetRuleContext<ExplainColumnsOnTableContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExplainIndicesOnTableContext explainIndicesOnTable() {
			return GetRuleContext<ExplainIndicesOnTableContext>(0);
		}
		public ExplainQueryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_explainQuery; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRaccoonSQLListener typedListener = listener as IRaccoonSQLListener;
			if (typedListener != null) typedListener.EnterExplainQuery(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRaccoonSQLListener typedListener = listener as IRaccoonSQLListener;
			if (typedListener != null) typedListener.ExitExplainQuery(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRaccoonSQLVisitor<TResult> typedVisitor = visitor as IRaccoonSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExplainQuery(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExplainQueryContext explainQuery() {
		ExplainQueryContext _localctx = new ExplainQueryContext(Context, State);
		EnterRule(_localctx, 12, RULE_explainQuery);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100;
			Match(T__6);
			State = 104;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__13:
				{
				State = 101;
				index();
				}
				break;
			case T__7:
			case T__14:
				{
				State = 102;
				explainColumnsOnTable();
				}
				break;
			case T__9:
				{
				State = 103;
				explainIndicesOnTable();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExplainColumnsOnTableContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TableContext table() {
			return GetRuleContext<TableContext>(0);
		}
		public ExplainColumnsOnTableContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_explainColumnsOnTable; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRaccoonSQLListener typedListener = listener as IRaccoonSQLListener;
			if (typedListener != null) typedListener.EnterExplainColumnsOnTable(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRaccoonSQLListener typedListener = listener as IRaccoonSQLListener;
			if (typedListener != null) typedListener.ExitExplainColumnsOnTable(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRaccoonSQLVisitor<TResult> typedVisitor = visitor as IRaccoonSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExplainColumnsOnTable(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExplainColumnsOnTableContext explainColumnsOnTable() {
		ExplainColumnsOnTableContext _localctx = new ExplainColumnsOnTableContext(Context, State);
		EnterRule(_localctx, 14, RULE_explainColumnsOnTable);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 108;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__7) {
				{
				State = 106;
				Match(T__7);
				State = 107;
				Match(T__8);
				}
			}

			State = 110;
			table();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExplainIndicesOnTableContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TableContext table() {
			return GetRuleContext<TableContext>(0);
		}
		public ExplainIndicesOnTableContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_explainIndicesOnTable; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRaccoonSQLListener typedListener = listener as IRaccoonSQLListener;
			if (typedListener != null) typedListener.EnterExplainIndicesOnTable(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRaccoonSQLListener typedListener = listener as IRaccoonSQLListener;
			if (typedListener != null) typedListener.ExitExplainIndicesOnTable(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRaccoonSQLVisitor<TResult> typedVisitor = visitor as IRaccoonSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExplainIndicesOnTable(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExplainIndicesOnTableContext explainIndicesOnTable() {
		ExplainIndicesOnTableContext _localctx = new ExplainIndicesOnTableContext(Context, State);
		EnterRule(_localctx, 16, RULE_explainIndicesOnTable);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 112;
			Match(T__9);
			State = 113;
			Match(T__8);
			State = 114;
			table();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TruncateQueryContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TableContext table() {
			return GetRuleContext<TableContext>(0);
		}
		public TruncateQueryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_truncateQuery; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRaccoonSQLListener typedListener = listener as IRaccoonSQLListener;
			if (typedListener != null) typedListener.EnterTruncateQuery(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRaccoonSQLListener typedListener = listener as IRaccoonSQLListener;
			if (typedListener != null) typedListener.ExitTruncateQuery(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRaccoonSQLVisitor<TResult> typedVisitor = visitor as IRaccoonSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTruncateQuery(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TruncateQueryContext truncateQuery() {
		TruncateQueryContext _localctx = new TruncateQueryContext(Context, State);
		EnterRule(_localctx, 18, RULE_truncateQuery);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 116;
			Match(T__10);
			State = 117;
			table();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CreateIndexContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public IndexContext index() {
			return GetRuleContext<IndexContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IndexColumnsContext indexColumns() {
			return GetRuleContext<IndexColumnsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public UniqueConstraintContext uniqueConstraint() {
			return GetRuleContext<UniqueConstraintContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IfNotExistsContext ifNotExists() {
			return GetRuleContext<IfNotExistsContext>(0);
		}
		public CreateIndexContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_createIndex; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IRaccoonSQLListener typedListener = listener as IRaccoonSQLListener;
			if (typedListener != null) typedListener.EnterCreateIndex(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IRaccoonSQLListener typedListener = listener as IRaccoonSQLListener;
			if (typedListener != null) typedListener.ExitCreateIndex(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IRaccoonSQLVisitor<TResult> typedVisitor = visitor as IRaccoonSQLVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCreateIndex(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CreateIndexContext createIndex() {
		CreateIndexContext _localctx = new CreateIndexContext(Context, State);
		EnterRule(_localctx, 20, RULE_createIndex);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 120;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__18) {
				{
				State = 119;
				uniqueConstraint();
				}
			}

			State = 122;
			index();
			State = 124;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__1) {
				{
				State = 123;
				ifNotExists();
				}
			}

			State = 126;
			Match(T__11);
			State = 127;
			indexColumns();
			State = 128;
			Match(T__12);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
